--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 
 
 
-        <p class="in">Вибачте, за Вашим запитом нічого не знайдено.</p>
+        <p class="in">За вашим запитом нічого не знайдено.</p>
 
     </div>
 
