--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                     <ul class="header_list">
                         <li class="list_menuLi"><a class="list_menuAIFPK " href="istorichniFoto/index.html">
 								Історичні фотографії
+
+
+                                
+							</a></li>
+<br><br><br>
+                            <li class="list_menuLi"><a class="list_menuAIFPK " href="https://docs.google.com/forms/d/e/1FAIpQLSefg1WQcgpmeh6dEuB9NxFPXOKGpb9V7JF3dRIiLULUSU-Gww/viewform?usp=header" target="_blank">
+								Залишити відгук
+
+
+                                
 							</a></li>
 
                     </ul>
