--- a/istorichniFoto/index.html
+++ b/istorichniFoto/index.html
@@ -58,7 +58,7 @@
 
 
                     <ul class="header_list">
-                        <li class="list_menuLi"><a class="list_menuAIFPK " href="../index.html">Київ</a></li>
+                        <li class="list_menuLi"><a class="list_menuAIFPK " href="../">Київ</a></li>
 
                     </ul>
                     </nav>
