--- a/C/index.html
+++ b/C/index.html
@@ -1,75 +1,88 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/nullstyles.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>3</title>
 </head>
+
 <body>
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 
-<div class="playingField" >
-    <div class="A">
+    <div id="blocker"></div>
 
-        <img class="AImgAABACA" src="img/1.png">
-        <img class="AImgABBBCB" src="img/1.png">
-        <img class="AImgACBCCC" src="img/1.png">
-        <img class="AImgCACBCC" src="img/1.png">
-        <img class="AImgBABBBC" src="img/1.png">
-        <img class="AImgAAABAC" src="img/1.png">
-        <img class="AImgAABBCC" src="img/1.png">
-        <img class="AImgCABBAC" src="img/1.png">
+    <div class="playingField">
 
-        <div class="gameSquares AA">
+        <div class="menu">
+            <a class="1">Класика</a><br><br>
+            <a class="2">3x3</a><br><br>
+            <a class="3">Рандом</a><br><br>
+            <a class="4">Рандом 3x3</a><br><br>
+        </div>
 
-            <div class="ZAImg ImgAA" ></div>
-            <div class="CAImg ImgAA" >
-                ✕
+        <div class="A none">
+
+            <img class="AImgAABACA" src="img/1.png">
+            <img class="AImgABBBCB" src="img/1.png">
+            <img class="AImgACBCCC" src="img/1.png">
+            <img class="AImgCACBCC" src="img/1.png">
+            <img class="AImgBABBBC" src="img/1.png">
+            <img class="AImgAAABAC" src="img/1.png">
+            <img class="AImgAABBCC" src="img/1.png">
+            <img class="AImgCABBAC" src="img/1.png">
+
+            <div class="gameSquares AA">
+
+                <div class="ZAImg ImgAA"></div>
+                <div class="CAImg ImgAA">
+                    ✕
+                </div>
+            </div>
+            <div class="gameSquares BA">
+                <div class="ZAImg ImgBA"></div>
+                <div class="CAImg ImgBA">✕</div>
+            </div>
+            <div class="gameSquares CA">
+                <div class="ZAImg ImgCA"></div>
+                <div class="CAImg ImgCA">✕</div>
             </div>
         </div>
-        <div class="gameSquares BA">
-            <div class="ZAImg ImgBA" ></div>
-            <div class="CAImg ImgBA" >✕</div>
+        <div class="B none">
+            <div class="gameSquares AB">
+                <div class="ZAImg ImgAB"></div>
+                <div class="CAImg ImgAB">✕</div>
+            </div>
+            <div class="gameSquares BB">
+                <div class="ZAImg ImgBB"></div>
+                <div class="CAImg ImgBB">✕</div>
+            </div>
+            <div class="gameSquares CB">
+                <div class="ZAImg ImgCB"></div>
+                <div class="CAImg ImgCB">✕</div>
+            </div>
         </div>
-        <div class="gameSquares CA">
-            <div class="ZAImg ImgCA" ></div>
-            <div class="CAImg ImgCA" >✕</div>
-        </div>
-    </div>
-    <div class="B">
-       <div class="gameSquares AB">
-        <div class="ZAImg ImgAB" ></div>
-        <div class="CAImg ImgAB" >✕</div>
-       </div>
-       <div class="gameSquares BB">
-        <div class="ZAImg ImgBB" ></div>
-        <div class="CAImg ImgBB" >✕</div>
-       </div>
-       <div class="gameSquares CB">
-        <div class="ZAImg ImgCB" ></div>
-        <div class="CAImg ImgCB" >✕</div>
-       </div>
-    </div>
-    <div class="C">
-        <div class="gameSquares AC">
-            <div class="ZAImg ImgAC" ></div>
-            <div class="CAImg ImgAC" >✕</div>
-        </div>
-        <div class="gameSquares BC">
-            <div class="ZAImg ImgBC" ></div>
-            <div class="CAImg ImgBC" >✕</div>
-        </div>
-        <div class="gameSquares CC">
-            <div class="ZAImg ImgCC" ></div>
-            <div class="CAImg ImgCC" >✕</div>
+        <div class="C none">
+            <div class="gameSquares AC">
+                <div class="ZAImg ImgAC"></div>
+                <div class="CAImg ImgAC">✕</div>
+            </div>
+            <div class="gameSquares BC">
+                <div class="ZAImg ImgBC"></div>
+                <div class="CAImg ImgBC">✕</div>
+            </div>
+            <div class="gameSquares CC">
+                <div class="ZAImg ImgCC"></div>
+                <div class="CAImg ImgCC">✕</div>
+            </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
