--- a/C/index.html
+++ b/C/index.html
@@ -18,6 +18,9 @@
 
     <div id="blocker"></div>
 
+    <!-- <div class="refresh-icon none"></div> -->
+
+
     <div class="playingField">
 
         <div class="menu">
